assets/css/main.css
/* ... */
.formerize-placeholder {
  color: rgba(255, 255, 255, 0.5) !important;
  opacity: 1.0; }

/* Button */
input[type="submit"],
input[type="reset"],
input[type="button"],
button,
.button {
  -moz-appearance: none;
  -webkit-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
  -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
  -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
  background-color: #00c6fd;
  border-radius: 6px;
  border: 0;
  color: #ffffff !important;
  cursor: pointer;
  display: inline-block;
  font-weight: 700;
  height: 2.75em;
  line-height: 2.75em;
  padding: 0 1.125em;
  text-align: center;
  text-decoration: none;
  white-space: nowrap; }
  input[type="submit"]:hover,
  input[type="reset"]:hover,
  input[type="button"]:hover,
  button:hover,
  .button:hover {
    background-color: #33d1fd; }
  input[type="submit"]:active,
  input[type="reset"]:active,
  input[type="button"]:active,
  button:active,
  .button:active {
    background-color: #00a8d9; }
  input[type="submit"].disabled, input[type="submit"]:disabled,
  input[type="reset"].disabled,
  input[type="reset"]:disabled,
  input[type="button"].disabled,
  input[type="button"]:disabled,
  button.disabled,
  button:disabled,
  .button.disabled,
  .button:disabled {
    opacity: 0.5; }
  @media screen and (max-width: 480px) {
    input[type="submit"],
    input[type="reset"],
    input[type="button"],
    button,
    .button {
      padding: 0; } }

/* Header */
#header h1 {
  font-size: 3.25em;
  margin: 0 0 0.55em 0; }

#header p {
  font-size: 1.35em;
  line-height: 1.65em; }

#header a {
  color: inherit; }

@media screen and (max-width: 736px) {
  #header h1 {
    font-size: 2em; }
  #header p {
    font-size: 1em; } }

@media screen and (max-width: 480px) {
  #header {
    margin: 0 0 1em 0; } }

/* Logo */
#logo {
  position: fixed;
  top: 1.5em;
  left: 1.5em;
  z-index: 10; }
  #logo img {
    width: 80px;
    height: 80px;
    object-fit: contain; }
  @media screen and (max-width: 480px) {
    #logo {
      top: 1em;
      left: 1em; }
      #logo img {
        width: 30px;
        height: 30px; } }

/* Signup Form */
#signup-form {
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  justify-content: center;
  position: absolute; }
  #signup-form .button {
    width: 20em; }
  @media screen and (max-width: 480px) {
    #signup-form .button {
      width: 100%; } }

/* Footer */
#footer {
  -moz-transition: opacity 0.5s ease-in-out;
  -webkit-transition: opacity 0.5s ease-in-out;
  -ms-transition: opacity 0.5s ease-in-out;
  transition: opacity 0.5s ease-in-out;
  bottom: 4em;
  color: rgba(255, 255, 255, 0.5);
  left: 4em;
  opacity: 0.5;
  position: absolute; }
  #footer .icons {
    margin: 0 0 0.5em 0; }
  #footer .copyright {
    font-size: 0.8em;
    list-style: none;
    padding: 0; }
    #footer .copyright li {
      border-left: solid 1px rgba(255, 255, 255, 0.25);
      display: inline-block;
      line-height: 1em;
      margin: 0 0 0 0.75em;
      padding: 0 0 0 0.75em; }
      #footer .copyright li:first-child {
        border-left: 0;
        margin-left: 0;
        padding-left: 0; }
    #footer .copyright a {
      color: inherit; }
  #footer:hover {
    opacity: 1; }
  #footer > :last-child {
    margin-bottom: 0; }
  @media screen and (max-width: 1680px) {
    #footer {
      bottom: 3.5em;
      left: 3.5em; } }
  @media screen and (max-width: 736px) {
    #footer {
      bottom: 2em;
      left: 2em; } }
  @media screen and (max-width: 360px) {
    #footer {
      bottom: 1.25em;
      left: 1.25em; } }
  @media screen and (max-height: 640px) {
    #footer {
      bottom: auto;
      left: auto;
      margin: 1em 0 0 0;
      position: relative; } }

